--- a/javacipt_basic/langugae.html
+++ b/javacipt_basic/langugae.html
@@ -58,7 +58,7 @@
             }
         };
         var ad_result=adder(4);
-        console.log(ad_result(5))
+        console.log(typeof(ad_result),ad_result(3))
 
     </script>
 
